--- a/src/components/style/HappyMan.css
+++ b/src/components/style/HappyMan.css
@@ -1,16 +1,62 @@
-#bonhomme {
-    width: 100px;
-    height: 100px;
-    background: rgb(206, 165, 165);
-    position: relative;
-    animation: mymove 1s 3;
+.element-animation Genial {
+    animation: animationFrames linear 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: animationFrames linear 1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -moz-animation: animationFrames linear 1s;
+    -moz-animation-iteration-count: 1;
+    -moz-transform-origin: 50% 50%;
+    -o-animation: animationFrames linear 1s;
+    -o-animation-iteration-count: 1;
+    -o-transform-origin: 50% 50%;
+    -ms-animation: animationFrames linear 1s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%;
 }
 
-@keyframes bonhomme {
-    from {
-        top: 0px;
+@keyframes animationFrames {
+    0% {
+        transform: translate(0px, -28px);
     }
-    to {
-        top: 200px;
+    100% {
+        transform: translate(0px, -28px);
+    }
+}
+
+@-moz-keyframes animationFrames {
+    0% {
+        -moz-transform: translate(0px, -28px);
+    }
+    100% {
+        -moz-transform: translate(0px, -28px);
+    }
+}
+
+@-webkit-keyframes animationFrames {
+    0% {
+        -webkit-transform: translate(0px, -28px);
+    }
+    100% {
+        -webkit-transform: translate(0px, -28px);
+    }
+}
+
+@-o-keyframes animationFrames {
+    0% {
+        -o-transform: translate(0px, -28px);
+    }
+    100% {
+        -o-transform: translate(0px, -28px);
+    }
+}
+
+@-ms-keyframes animationFrames {
+    0% {
+        -ms-transform: translate(0px, -28px);
+    }
+    100% {
+        -ms-transform: translate(0px, -28px);
     }
 }
