--- a/src/components/style/Contact.css
+++ b/src/components/style/Contact.css
@@ -6,13 +6,13 @@
     height: 800px;
     border-radius: 30px;
    
-}*/
+}
 
 .color{
    
     
-   /* width: 200px;
-   border: solid black 1px;*/
+    width: 200px;
+   border: solid black 1px;
    background-color: rgb(68, 188, 204);
    color: white;
     height: 250px;
@@ -25,4 +25,134 @@
     width: 500px;
     height: 800px;
     border-radius: 30px;
+}*/
+.box__chat{
+   /* display:flex;
+    justify-content: left;*/
+    background-color: #edededed;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    height: 700px;
+    width: 400px;
+    margin-left:500px;
+    box-shadow: -1px 4px 20px -6px black; 
+}
+
+.chat__header{
+    padding:5px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+
+.chat__headerInfo{
+    flex:1;
+    padding-left:20px;
+}
+
+.chat__headerInfo > h3{
+    margin-top: 3px;
+    font-weight: 500;
+}
+
+.chat__headerInfo > p{
+    margin: 0px;
+    color: gray;
+}
+
+.chat__body{
+   flex: 1;
+    background-image: url("../../img/fond-ecran.jpg");
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    padding-bottom: 230px;
+    /*overflow: scroll;*/
+
+}
+
+.chat__message{
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    width: fit-content;
+    border-radius: 30px;
+    background-color: #ffffff;
+    margin-bottom: 30px;
+}
+.chat__reciever{
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+.chat__timestamp{
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.copy{
+    display: flex;
+   margin-top: 10px;
+}
+
+.copy > .form__copy > textarea{
+   
+  
+    background-color: rgb(255, 249, 247);
+    overflow: hidden;
+    resize: none;
+    border: none;
+    height: 25px;
+   
+}
+
+.copy > button {
+    border:solid 1px lightskyblue;
+    color: rgb(0, 110, 255);
+    background-color: white;
+    height: 25px;
+    font-size: 11px;
+    border-radius: 5px;
+
+}
+.chat__name{
+    position: absolute;
+    top: -15px;
+    font-weight: 800;
+    font-size:xx-small;
+}
+.chat__footer{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top:1px solid lightgray;
+}
+
+.chat__footer > div {
+  margin-left: 10px;
+  margin-bottom: 8px;
+  flex: 1;
+  display: flex;
+    
+}
+
+
+.chat__footer> div> .faux__input{
+    flex: 1;
+    border-radius: 30px;
+    padding: 8px;
+    border: none;
+    background-color: white;
+    font-style: italic;
+    color: grey;
+}
+.chat__footer > div> button{
+    border: none;
+    background-color: lightskyblue;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.chat__footer > div > button > a {
+    color: black;
 }
