--- a/src/components/style/APropos.css
+++ b/src/components/style/APropos.css
@@ -5,16 +5,17 @@
 }
 .propos_text > h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 23px;
 }
-.propos_text > p{
-    text-align: justify;
+/*.propos_text > p{
+    text-align: ;
   
-}
+}*/
 .propos_text{
     border-radius: 30px;
-    border: 1px solid #edeea1c2;
-    background-color: rgb(195, 241, 67);
+    border: 1px solid #b5f057c2;
+   /* background-color: rgb(195, 241, 67);*/
+   box-shadow: -1px 4px 20px -6px gray;
 }
 .propos_images > div > img{
     border-radius: 30px;
