--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -3,16 +3,22 @@
     text-align: start;
 }
 
+.home__button > button{
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 10px;
+}
 .boite1{
-    background-color: pink;
-    border: purple solid 2px;
+   /* background-color: rgb(251, 227, 231);*/
+    border: gray solid 2px;
+    color: black;
 }
 .boite2{
-    background-color: pink;
-    border: purple solid 2px;
+    background-color: rgb(255, 236, 239);
+    border:gray solid 2px;
 }
 
 .boite3{
-    background-color: pink;
-    border: purple solid 2px;
+    background-color: rgb(246, 226, 229);
+    border: gray solid 2px;
 }
