--- a/src/components/style/Inspirations.css
+++ b/src/components/style/Inspirations.css
@@ -1,41 +1,64 @@
-.carre {
-    border: solid #828887;
-    margin: 0px;
-    padding: 15px;
-    font-size: 30px;
-}
-
-.color1 {
-    background-color: rgb(236, 26, 219);
-}
-
-.color2 {
-    background-color: rgb(199, 200, 212);
-}
-
-.color3 {
-    background-color: rgb(177, 225, 177);
-}
-
-.color4 {
-    background-color: rgb(120, 205, 226);
-}
-
-.color5 {
-    background-color: rgb(216, 226, 120);
-}
-
-.color6 {
-    background-color: rgb(79, 80, 170);
-}
-
-.photo {
-    width: 200px;
-    height: 200px;
-}
-
-.text {
-    font-size: 12px;
-    color: grey;
-    text-align: justify;
-}
+        .carre {
+            /*border: solid #828887;*/
+            margin: 10px;
+            margin-left: 20px;
+            margin-right: 20px;
+            padding: 15px;
+            font-size: 30px;
+            border-radius: 5px;
+            box-shadow: 1px 1px 1px 1px rgb(128, 160, 128);
+            padding: 10px;
+            white-space: 10px;
+            cursor: pointer;
+        }
+        
+        .container1 {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            background-origin: padding-box;
+            border-radius: 20px;
+            padding: 10px;
+            background-color: rgb(250, 253, 208);
+        }
+        
+        .color1 {
+            background-color: rgb(236, 26, 219);
+        }
+        
+        .color2 {
+            background-color: rgb(199, 200, 212);
+        }
+        
+        .color3 {
+            background-color: rgb(177, 225, 177);
+        }
+        
+        .color4 {
+            background-color: rgb(120, 205, 226);
+        }
+        
+        .color5 {
+            background-color: rgb(216, 226, 120);
+        }
+        
+        .color6 {
+            background-color: rgb(79, 80, 170);
+        }
+        
+        .photo {
+            width: 300px;
+            height: 300px;
+        }
+        
+        .text {
+            font-size: 12px;
+            color: grey;
+            text-align: justify;
+        }
+        
+        .text h3 {
+            font-size: 18px;
+            color: rgb(59, 5, 59)
+        }
